@@ -1,21 +1,27 @@
 package com.japansport.controller;
 
 import com.japansport.dao.CartDao;
+import com.japansport.dao.VoucherDao;
 import com.japansport.model.Cart;
 import com.japansport.model.CartItem;
 import com.japansport.model.User;
 
+import com.japansport.model.Voucher;
+import com.japansport.service.VoucherService;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.*;
 
 import java.io.IOException;
+import java.math.BigDecimal;
 import java.util.List;
 
 @WebServlet(urlPatterns = {"/cart"})
 public class CartController extends HttpServlet {
 
     private final CartDao cartDao = new CartDao();
+    private final VoucherService voucherService = new VoucherService();
+    private final VoucherDao voucherDao = new VoucherDao();
 
     @Override
     protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
@@ -40,10 +46,39 @@ public class CartController extends HttpServlet {
 
         try {
             Cart cart = cartDao.getActiveCart(u.getId());
+            BigDecimal subtotal = BigDecimal.valueOf(cart.getSubtotal());
+
+            // xu ly voucher
+            String voucherCode = (String) req.getSession().getAttribute("appliedVoucherCode");
+            Voucher appliedVoucher = null;
+            BigDecimal discountAmount = BigDecimal.ZERO;
+            BigDecimal finalTotal = subtotal;
+
+            if (voucherCode != null && !voucherCode.trim().isEmpty()) {
+                appliedVoucher = voucherService.applyVoucher(voucherCode, subtotal);
+                if (appliedVoucher != null) {
+                    discountAmount = voucherService.calculateDiscount(appliedVoucher, subtotal);
+                    finalTotal = subtotal.subtract(discountAmount);
+                } else {
+                    req.getSession().removeAttribute("appliedVoucherCode");
+                }
+            }
+
+            // Gợi ý voucher phù hợp với đơn hàng hiện tại
+            List<Voucher> suggestedVouchers = voucherDao.getApplicableVouchers(subtotal);
+
             req.setAttribute("cart", cart);
             req.setAttribute("cartItems", cart.getItems());
+            req.setAttribute("subtotal", subtotal);
+            req.setAttribute("appliedVoucher", appliedVoucher);
+            req.setAttribute("discountAmount", discountAmount);
+            req.setAttribute("finalTotal", finalTotal);
+            req.setAttribute("voucherCode", voucherCode);
+            req.setAttribute("suggestedVouchers", suggestedVouchers);
+
             req.getRequestDispatcher("/cart.jsp").forward(req, resp);
         } catch (Exception e) {
+            e.printStackTrace();
             throw new ServletException(e);
         }
     }
@@ -62,39 +97,61 @@ public class CartController extends HttpServlet {
         if (action == null || action.isBlank()) action = "add";
 
         try {
-            switch (action) {
-                case "add": {
-                    int productId = Integer.parseInt(req.getParameter("productId"));
-                    String vidStr = req.getParameter("variantId");
-                    Integer variantId = (vidStr == null || vidStr.isBlank()) ? null : Integer.parseInt(vidStr);
-                    int qty = Integer.parseInt(req.getParameter("qty"));
-                    cartDao.addToCart(u.getId(), productId, variantId, qty);
+            if ("applyVoucher".equals(action)) {
+                String voucherCode = req.getParameter("voucherCode");
+                if (voucherCode != null && !voucherCode.trim().isEmpty()) {
+                    Cart cart = cartDao.getActiveCart(u.getId());
+                    BigDecimal subtotal = BigDecimal.valueOf(cart.getSubtotal());
+                    Voucher voucher = voucherService.applyVoucher(voucherCode, subtotal);
 
-                    // mua ngay -> đi checkout
-                    if ("1".equals(req.getParameter("buyNow"))) {
-                        resp.sendRedirect(req.getContextPath() + "/checkout");
-                        return;
+                    if (voucher != null) {
+                        req.getSession().setAttribute("appliedVoucherCode", voucherCode.toUpperCase());
+                        req.getSession().setAttribute("voucherSuccess", "Áp dụng voucher " + voucherCode + " thành công!");
+                    } else {
+                        req.getSession().setAttribute("voucherError", "Mã voucher không hợp lệ hoặc không thỏa mãn điều kiện!");
                     }
-                    break;
                 }
-                case "update": {
-                    int cartItemId = Integer.parseInt(req.getParameter("cartItemId"));
-                    int qty = Integer.parseInt(req.getParameter("qty"));
-                    cartDao.updateQuantity(u.getId(), cartItemId, qty);
-                    break;
-                }
-                case "remove": {
-                    int cartItemId = Integer.parseInt(req.getParameter("cartItemId"));
-                    cartDao.removeItem(u.getId(), cartItemId);
-                    break;
-                }
-                case "clear": {
-                    cartDao.clearCart(u.getId());
-                    break;
+            }
+            else if ("removeVoucher".equals(action)) {
+                req.getSession().removeAttribute("appliedVoucherCode");
+                req.getSession().setAttribute("voucherSuccess", "Đã bỏ voucher.");
+            }
+            else {
+                switch (action) {
+                    case "add": {
+                        int productId = Integer.parseInt(req.getParameter("productId"));
+                        String vidStr = req.getParameter("variantId");
+                        Integer variantId = (vidStr == null || vidStr.isBlank()) ? null : Integer.parseInt(vidStr);
+                        int qty = Integer.parseInt(req.getParameter("qty"));
+                        cartDao.addToCart(u.getId(), productId, variantId, qty);
+
+                        // mua ngay -> đi checkout
+                        if ("1".equals(req.getParameter("buyNow"))) {
+                            resp.sendRedirect(req.getContextPath() + "/checkout");
+                            return;
+                        }
+                        break;
+                    }
+                    case "update": {
+                        int cartItemId = Integer.parseInt(req.getParameter("cartItemId"));
+                        int qty = Integer.parseInt(req.getParameter("qty"));
+                        cartDao.updateQuantity(u.getId(), cartItemId, qty);
+                        break;
+                    }
+                    case "remove": {
+                        int cartItemId = Integer.parseInt(req.getParameter("cartItemId"));
+                        cartDao.removeItem(u.getId(), cartItemId);
+                        break;
+                    }
+                    case "clear": {
+                        cartDao.clearCart(u.getId());
+                        break;
+                    }
                 }
             }
             resp.sendRedirect(req.getContextPath() + "/cart");
         } catch (Exception e) {
+            e.printStackTrace();
             req.getSession().setAttribute("cartError", e.getMessage());
             resp.sendRedirect(req.getContextPath() + "/cart");
         }
